Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Some future release (Zope X3 3.1.0)

    New features

      - Developed a generic browser:form directive. It is pretty much the same
        as the browser:editform directive, except that the data is not stored
        on some context or adapted context but sent as a dictionary to special
        method (by default). By default these methods are named `getData()` and
        `setData(data)`.
 
      - When raising the Unauthorized exception, the security checker
        now passes the object in question in addition to the attribute
        name and missing permission.  This should make debugging easier.

      - You can declare "features" provided by your package with the new
        <meta:provides feature="name" /> ZCML directive.  The presence of these
        features can be tested with the new zcml:condition attribute.

      - ZCML supports conditional directives using the zcml:condition
        attribute.  The value of the attribute is an expression of the
        form "verb arguments".  Currently the only recognized verb is "have",
        and it takes a single name of a feature as an argument.

        If the expression is true, the element the attribute is attached to
        will be used, otherwise the element and its descendents will be
        ignored.

      - API doctool has received some upgrades:

        * Code Browser now also shows interfaces and text files.

        * A new `bookmodule` compiles all our README.txt and other text
          documentation files to a nice book-like format.

        * A new `typemodule` lists all interface types (such as
          `IContentType`) and then let's you see all interfaces providing this
          type (for example `IFile`)
