@@ -10,6 +10,8 @@ Zope Changes
 
     New features
 
+      - Implemented issue 309: <schemadisplay> should support <widget>
+
       - Developed a generic browser:form directive. It is pretty much the same
         as the browser:editform directive, except that the data is not stored
         on some context or adapted context but sent as a dictionary to special
